@startuml
abstract class Personaje {
    - vida: int
    - experiencia: int
    - batallasGanadas: int
    - nombre: String
    - armadura: int
    + Personaje(vida: int, nombre: String, armadura: int)
    + recibirDanio(): void
    + estaVivo(): boolean
    + subirNivel(): void
    + <<abstract>> atacar(personaje: Personaje): void
    + <<abstract>> defensa(): void
    + toString(): String
}

class Guerrero {
    - habilidad: String
    + Guerrero(vida: int, nombre: String, habilidad: String)
    + atacar(personaje: Personaje): void
    + defensa(): void
    + toString(): String
}

class Mago {
    - estrategia: String
    + Mago(vida: int, nombre: String, estrategia: String)
    + atacar(personaje: Personaje): void
    + defensa(): void
    + toString(): String
}

class Arquero {
    - atributos: String
    + Arquero(vida: int, nombre: String, atributos: String)
    + atacar(personaje: Personaje): void
    + defensa(): void
    + toString(): String
}

class P1JuegoRolEjecutor {
    + main(args: String[]): void
}

Personaje <|-- Guerrero
Personaje <|-- Mago
Personaje <|-- Arquero
P1JuegoRolEjecutor ---> Guerrero
P1JuegoRolEjecutor ---> Mago
P1JuegoRolEjecutor ---> Arquero
@enduml
